# family_camp

./: .gitignore  README.md  docker-compose.yml  emails-u.txt  index.html  makefile
app/: __init__.py  routes.py
app/templates/: index.html
backend/: .env.example  Procfile  app.py  gunicorn.config.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  obtain_refresh_token.py
backend/app/routers/: admin.py  register.py  registration.py
backend/app/services/: auth.py  email.py
backend/scripts/: create_admin.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: registration-duplicate-email.spec.ts  registration-just-others.spec.ts  registration-landing.spec.ts  registration-me-and-others.spec.ts  registration-update.spec.ts  registration-validation.spec.ts
frontend/src/: App.tsx  admin.css  index.css
frontend/src/components/: AttendeeForm.tsx  CampInfo.tsx  Card.tsx  DevBanner.tsx  HeroSection.tsx  RegisterForm.tsx
frontend/src/components/admin/: RegistrationList.tsx
frontend/src/context/: AdminAuthContext.tsx  RegistrationContext.tsx
frontend/src/pages/: AdminLoginPage.tsx  AdminPage.tsx  AttendeeTablePage.tsx  MainPage.tsx  PaymentInfoPage.tsx  RegistrationFormPage.tsx  RegistrationLandingPage.tsx  RegistrationSummaryPage.tsx  RegistrationUpdatePage.tsx
frontend/src/utils/: pricing.ts
site/: confirmation.html  fail.html  index.html  pozvanka.txt  register.html
site/static/css/: style.css
site/static/js/: form_validation.js
static/css/: style.css
static/js/: validation.js
