[project]
name = "family-camp-backend"
version = "0.1.0"
description = "Family Camp – email pre-registration backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.6.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.29.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.125.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "qrcode[pil]>=8.0",
    "pay-by-square>=0.2.0",
]

[tool.uv]
native-tls = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
